--- a/products/index.html
+++ b/products/index.html
@@ -386,7 +386,7 @@
                                 <span class="product-badge new">New</span>
                             </div>
                             <div class="product-img">
-                                <img src="../assets/images/Gas cylinder LPG bottle regulator.jpg" alt="Gas Regulator">
+                                <img src="../assets/images/accessories/Gas cylinder LPG bottle regulator.jpg" alt="Gas Regulator">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -448,7 +448,7 @@
                                 <span class="product-badge discount">-15%</span>
                             </div>
                             <div class="product-img">
-                                <img src="../assets/images/CEM Gas Leak Detector Pro in Tools & Hardware _ Hand Tools _ Measuring & Levels.jpg" alt="Gas Detector">
+                                <img src="../assets/images/accessories/CEM Gas Leak Detector Pro in Tools & Hardware _ Hand Tools _ Measuring & Levels.jpg" alt="Gas Detector">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -478,7 +478,7 @@
                         <!-- Product 5 -->
                         <a href="" class="product-card">
                             <div class="product-img">
-                                <img src="https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Oxygen Cylinder">
+                                <img src="../assets/images/accessories/Portable Oxygen Cylinder For Rent In Bangalore.jpg" alt="Oxygen Cylinder">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -507,7 +507,7 @@
                         <!-- Product 6 -->
                         <a href="" class="product-card">
                             <div class="product-img">
-                                <img src="https://images.unsplash.com/photo-1635070041078-e363dbe005cb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Cylinder Cart">
+                                <img src="../assets/images/accessories/Gas Cylinder Trolley.jpg" alt="Gas Cylinder Cart">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -539,7 +539,7 @@
                                 <span class="product-badge new">New</span>
                             </div>
                             <div class="product-img">
-                                <img src="https://images.unsplash.com/photo-1611273426858-450d0e7b9b0e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Camping Gas Kit">
+                                <img src="../assets/images/camping gas kit.jpg" alt="Camping Gas Kit">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -569,7 +569,7 @@
                         <!-- Product 8 -->
                         <a href="" class="product-card">
                             <div class="product-img">
-                                <img src="https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Hose">
+                                <img src="../assets/images/accessories/Pigtail Hose Pipe.jpg" alt="Gas Hose">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -601,7 +601,7 @@
                                 <span class="product-badge best-seller">Best Seller</span>
                             </div>
                             <div class="product-img">
-                                <img src="https://images.unsplash.com/photo-1635070041078-e363dbe005cb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Industrial Gas Cylinder">
+                                <img src="../assets/images/Oryx Gas 13kg Cylinder + Regulator + Hosepipe.jpg" alt="Industrial Gas Cylinder">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -630,7 +630,7 @@
                         <!-- Product 10 -->
                         <a href="" class="product-card">
                             <div class="product-img">
-                                <img src="https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Burner">
+                                <img src="../assets/images/accessories/Burner  aluminum gas cover.jpg" alt="Gas Burner">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -663,7 +663,7 @@
                                 <span class="product-badge discount">-20%</span>
                             </div>
                             <div class="product-img">
-                                <img src="https://images.unsplash.com/photo-1611273426858-450d0e7b9b0e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Grill">
+                                <img src="../assets/images/accessories/Butane Grill Stove, Portable Camping Grill Gas Stove, Portable Butane Gas Stove.jpg" alt="Gas Grill">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -725,7 +725,7 @@
                                 <span class="product-badge new">New</span>
                             </div>
                             <div class="product-img">
-                                <img src="https://images.unsplash.com/photo-1635070041078-e363dbe005cb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Cylinder">
+                                <img src="../assets/images/6kg Gas Cylinder.jpg" alt="Gas Cylinder">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -754,7 +754,7 @@
                         <!-- Product 14 -->
                         <a href="" class="product-card">
                             <div class="product-img">
-                                <img src="https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Adapter">
+                                <img src="../assets/images/accessories/Universal Adapter Quickly Attach System For Camp Stove Grills And Cookers.jpg" alt="Gas Adapter">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -786,7 +786,7 @@
                                 <span class="product-badge best-seller">Best Seller</span>
                             </div>
                             <div class="product-img">
-                                <img src="https://images.unsplash.com/photo-1611273426858-450d0e7b9b0e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Oven">
+                                <img src="../assets/images/accessories/Professional Propane Range in Stainless Steel, LRG3601ULP - 36 _ Stainless Steel.jpg" alt="Gas Oven">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -816,7 +816,7 @@
                         <!-- Product 16 -->
                         <a href="" class="product-card">
                             <div class="product-img">
-                                <img src="https://images.unsplash.com/photo-1581094271901-8022df4466f9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Mask">
+                                <img src="../assets/images/gas-safety-gear/industrial face mask.jpg" alt="Gas Mask">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -848,7 +848,7 @@
                                 <span class="product-badge discount">-10%</span>
                             </div>
                             <div class="product-img">
-                                <img src="https://images.unsplash.com/photo-1635070041078-e363dbe005cb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Cylinder">
+                                <img src="../assets/images/cooking gas 8.jpg" alt="Gas Cylinder">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -878,7 +878,7 @@
                         <!-- Product 18 -->
                         <a href="" class="product-card">
                             <div class="product-img">
-                                <img src="https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Valve">
+                                <img src="../assets/images/accessories/gas valve (1).jpg" alt="Gas Valve">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -910,7 +910,7 @@
                                 <span class="product-badge new">New</span>
                             </div>
                             <div class="product-img">
-                                <img src="https://images.unsplash.com/photo-1611273426858-450d0e7b9b0e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Cooker">
+                                <img src="../assets/images/accessories/Stove 4 Burner Gas Cooker Inox Stainless Steel Bulit In Hobs.jpg" alt="Gas Cooker">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -939,7 +939,7 @@
                         <!-- Product 20 -->
                         <a href="" class="product-card">
                             <div class="product-img">
-                                <img src="https://images.unsplash.com/photo-1581094271901-8022df4466f9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Alarm">
+                                <img src="../assets/images/accessories/Gas Leak alarm Wifi Home Gas Alarm Tuya App Monitor Mini Gas Detector Home.jpg" alt="Gas Alarm">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -968,7 +968,7 @@
                         <!-- Product 21 -->
                         <a href="" class="product-card">
                             <div class="product-img">
-                                <img src="https://images.unsplash.com/photo-1635070041078-e363dbe005cb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Cylinder">
+                                <img src="../assets/images/cooking gas 7.jpg" alt="Gas Cylinder">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -1000,7 +1000,7 @@
                                 <span class="product-badge discount">-15%</span>
                             </div>
                             <div class="product-img">
-                                <img src="https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Connector">
+                                <img src="../assets/images/accessories/gas connector.jpg" alt="Gas Connector">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -1030,7 +1030,7 @@
                         <!-- Product 23 -->
                         <a href="" class="product-card">
                             <div class="product-img">
-                                <img src="https://images.unsplash.com/photo-1611273426858-450d0e7b9b0e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Water Heater">
+                                <img src="../assets/images/accessories/Natural and LP Gas Commercial Gas Water Heater, 100 gal_, 120V AC.jpg" alt = "Gas Water Heater">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -1062,7 +1062,7 @@
                                 <span class="product-badge best-seller">Best Seller</span>
                             </div>
                             <div class="product-img">
-                                <img src="https://images.unsplash.com/photo-1581094271901-8022df4466f9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Safety Kit">
+                                <img src="../assets/images/accessories/safety kit.jpg" alt="Gas Safety Kit">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
