--- a/signup.html
+++ b/signup.html
@@ -1105,6 +1105,9 @@
         </a>
     </div>
 
+    <!-- JavaScript -->
+    <script src="./assets/js/signup.js"></script>
+
     <script>
         // Mobile Navigation Toggle
         const hamburger = document.getElementById('hamburger');
