--- a/products/gas-cylinders/index.html
+++ b/products/gas-cylinders/index.html
@@ -173,49 +173,55 @@
                                     </label>
                                     <label class="brand-option">
                                         <input type="checkbox" class="brand-checkbox" value="shell">
-                                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Shell_logo.svg/1200px-Shell_logo.svg.png" alt="Shell" class="brand-logo">
+                                        <img src="../../assets/images/shell logo.jpg" alt="Shell" class="brand-logo">
                                         <span class="brand-name">Shell</span>
                                         <span class="brand-count">(8)</span>
                                     </label>
                                     <label class="brand-option">
                                         <input type="checkbox" class="brand-checkbox" value="total">
-                                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/TotalEnergies_logo.svg/1200px-TotalEnergies_logo.svg.png" alt="Total" class="brand-logo">
+                                        <img src="../../assets/images/total logo.jpg" alt="Total" class="brand-logo">
                                         <span class="brand-name">Total</span>
                                         <span class="brand-count">(6)</span>
                                     </label>
                                     <label class="brand-option">
                                         <input type="checkbox" class="brand-checkbox" value="oryx">
-                                        <div class="brand-logo-text">ORYX</div>
+                                        <img src="../../assets/images/oryx energyies logo.jpg" alt="Oryx" class="brand-logo">
+                                        <!-- <div class="brand-logo-text">ORYX</div> -->
                                         <span class="brand-name">Oryx</span>
                                         <span class="brand-count">(5)</span>
                                     </label>
                                     <label class="brand-option">
                                         <input type="checkbox" class="brand-checkbox" value="stabex">
-                                        <div class="brand-logo-text">STABEX</div>
+                                        <img src="../../assets/images/stabex logo.png" alt="Stabex" class="brand-logo">
+                                        <!-- <div class="brand-logo-text">STABEX</div> -->
                                         <span class="brand-name">Stabex</span>
                                         <span class="brand-count">(4)</span>
                                     </label>
                                     <label class="brand-option">
                                         <input type="checkbox" class="brand-checkbox" value="hass">
-                                        <div class="brand-logo-text">HASS</div>
+                                        <img src="../../assets/images/hass logo.jpg" alt="Hass" class="brand-logo">
+                                       <!--  <div class="brand-logo-text">HASS</div> -->
                                         <span class="brand-name">Hass</span>
                                         <span class="brand-count">(3)</span>
                                     </label>
                                     <label class="brand-option">
                                         <input type="checkbox" class="brand-checkbox" value="hashi">
-                                        <div class="brand-logo-text">HASHI</div>
+                                        <img src="../../assets/images/hashi logo.png" alt="Hashi" class="brand-logo">
+                                        <!-- <div class="brand-logo-text">HASHI</div> -->
                                         <span class="brand-name">Hashi</span>
                                         <span class="brand-count">(2)</span>
                                     </label>
                                     <label class="brand-option">
                                         <input type="checkbox" class="brand-checkbox" value="mogas">
-                                        <div class="brand-logo-text">MOGAS</div>
+                                        <img src="../../assets/images/mogas logo.jpg" alt="Mogas" class="brand-logo">
+                                        <!-- <div class="brand-logo-text">MOGAS</div> -->
                                         <span class="brand-name">Mogas</span>
                                         <span class="brand-count">(2)</span>
                                     </label>
                                     <label class="brand-option">
                                         <input type="checkbox" class="brand-checkbox" value="meru">
-                                        <div class="brand-logo-text">MERU</div>
+                                        <img src="../../assets/images/meru logo.png" alt="Meru" class="brand-logo">
+                                        <!-- <div class="brand-logo-text">MERU</div> -->
                                         <span class="brand-name">Meru</span>
                                         <span class="brand-count">(2)</span>
                                     </label>
@@ -393,42 +399,42 @@
                 <p>We supply gas cylinders from all major manufacturers in Uganda</p>
                 <div class="brands-grid">
                     <div class="brand-card">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Shell_logo.svg/1200px-Shell_logo.svg.png" alt="Shell">
+                        <img src="../../assets/images/shell logo.jpg" alt="Shell">
                         <h3>Shell</h3>
                         <p>Global energy company with premium quality cylinders</p>
                     </div>
                     <div class="brand-card">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/TotalEnergies_logo.svg/1200px-TotalEnergies_logo.svg.png" alt="Total">
+                        <img src="../../assets/images/total logo.jpg" alt="Total">
                         <h3>Total</h3>
                         <p>French multinational integrated oil and gas company</p>
                     </div>
                     <div class="brand-card">
-                        <div class="brand-logo-text">ORYX</div>
+                         <img src="../../assets/images/oryx energyies logo.jpg" alt="Oryx" class="brand-logo">
                         <h3>Oryx</h3>
                         <p>Leading gas cylinder manufacturer in East Africa</p>
                     </div>
                     <div class="brand-card">
-                        <div class="brand-logo-text">STABEX</div>
+                        <img src="../../assets/images/stabex logo.png" alt="Stabex" class="brand-logo">
                         <h3>Stabex</h3>
                         <p>Trusted brand for safe and durable cylinders</p>
                     </div>
                     <div class="brand-card">
-                        <div class="brand-logo-text">HASS</div>
+                        <img src="../../assets/images/hass logo.jpg" alt="Hass" class="brand-logo">
                         <h3>Hass</h3>
                         <p>Reliable and affordable gas cylinders</p>
                     </div>
                     <div class="brand-card">
-                        <div class="brand-logo-text">HASHI</div>
+                        <img src="../../assets/images/hashi logo.png" alt="Hashi" class="brand-logo">
                         <h3>Hashi</h3>
                         <p>Quality cylinders for domestic and commercial use</p>
                     </div>
                     <div class="brand-card">
-                        <div class="brand-logo-text">MOGAS</div>
+                        <img src="../../assets/images/mogas logo.jpg" alt="Mogas" class="brand-logo">
                         <h3>Mogas</h3>
                         <p>Modern gas solutions for every home</p>
                     </div>
                     <div class="brand-card">
-                        <div class="brand-logo-text">MERU</div>
+                        <img src="../../assets/images/meru logo.png" alt="Meru" class="brand-logo">
                         <h3>Meru</h3>
                         <p>Eco-friendly and efficient gas cylinders</p>
                     </div>
