--- a/products/index.html
+++ b/products/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Gas Products | RonVick Gas Service Limited</title>
     <meta name="description" content="Browse our wide selection of gas cylinders and accessories at RonVick Gas Service Limited. Free delivery in Kasana Luwero.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
